<resources>
    <string name="app_name">FamilyTasks</string>
    <string name="redirect_create_account">Do you not have an account?</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="redirect_log_in">Already have an account?</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="message_reset_password">Enter the email address associated with your account and we\'ll send you a SMS with a code to reset your password.</string>
    <string name="send">Send</string>
    <string name="message_check_code">Enter the code you received via SMS.</string>
    <string name="check_code">Check code</string>
    <string name="change_password">Change password</string>
    <string name="enter_a_new_password">Enter a new password.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="family_group_name">Family Group Name</string>
    <string name="create_family_group">Create Family Group</string>
    <string name="set_your_nickname">Set your nickname</string>
    <string name="activity">Activity</string>
    <string name="member_name">Member Name</string>
    <string name="member_nickname">Member Nickname</string>
    <string name="members">Members</string>
    <string name="search_user">Search User by username or email address</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="set_nickname_for_the_future_members">Set nickname for the future members</string>
    <string name="save">Save</string>
    <string name="remove_members">Remove Members</string>
    <string name="my_account">My Account</string>
    <string name="full_name">Full Name</string>
    <string name="update_account">Update Account</string>
</resources>