<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/my_account"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/fullNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/full_name"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/fullNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameTitle"
        android:text="@string/full_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameValue"
        android:text="@string/username"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/usernameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTitle"
        android:text="@string/username"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameValue"
        android:text="@string/email_address"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTitle"
        android:text="@string/email_address"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="18dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/update_account"
        android:background="@drawable/button_active"
        android:textColor="@color/white"/>
</RelativeLayout>