<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_action_back" />


    <EditText
        android:id="@+id/familyGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:inputType="textPersonName"
        android:hint="@string/family_group_name"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyGroupName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/set_your_nickname" />

    <Spinner
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_family_group"
        android:background="@drawable/button_active"
        android:textColor="@color/white"
        />

</RelativeLayout>