<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_action_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="All members"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="Admin"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/memberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/member_name"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/memberNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/member_nickname" />

    <TextView
        android:id="@+id/members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/memberName"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/members"
        android:textSize="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersList"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@+id/members"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addMember"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/membersList"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_active"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="20sp"/>
        android:visibility="invisible"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/membersList"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_active"
        android:text="Remove Members"
        android:textColor="@color/white"
        android:visibility="invisible"/>

</RelativeLayout>